--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOILERPLATE!!!!</title>
+    <title>ClimbOn</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +12,33 @@
     />
   </head>
   <body>
+    <nav
+      data-bs-theme="dark"
+      class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">ClimbOn</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/climbspots">Climbspots</a>
+            <a class="nav-link" href="/climbspots/new">New Climbspots</a>
+            <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+          </div>
+        </div>
+      </div>
+    </nav>
     <main class="container"><%- body %></main>
 
     <script
