--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark py-2">
+<footer class="footer bg-dark py-2 mt-auto">
   <div class="container">
     <span class="text-dark-emphasis"> &copy; ClimbOn 2024</span>
   </div>
