--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,9 +18,16 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/climbspots">Climbspots</a>
-        <a class="nav-link" href="/climbspots/new">New Climbspots</a>
-        <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+      </div>
+      <!-- Conditional links based on user authentication -->
+      <div class="navbar-nav ms-auto">
+        <% if (user) { %>
+          <a class="nav-link" href="/climbspots/new" <%- title === 'Add Climbspot' ? 'class="active"' : '' %>>Add Climbspot</a>
+          <a class="nav-link" href="/climbspots" <%- title === 'View Climbspots' ? 'class="active"' : '' %>>Climbspots</a>
+          <a class="nav-link" href="/logout">Log Out</a>
+        <% } else { %>
+          <a class="nav-link" href="/auth/google">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" alt="Log In"></a>
+        <% } %>
       </div>
     </div>
   </div>
