--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,25 +1,14 @@
-<nav
-  data-bs-theme="dark"
-  class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
->
+<% title = typeof title !== 'undefined' ? title : 'Default Title'; %>
+<nav data-bs-theme="dark" class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ClimbOn</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
       </div>
-      <!-- Conditional links based on user authentication -->
       <div class="navbar-nav ms-auto">
         <% if (user) { %>
           <a class="nav-link" href="/climbspots/new" <%- title === 'Add Climbspot' ? 'class="active"' : '' %>>Add Climbspot</a>
