--- a/views/climbspots/show.ejs
+++ b/views/climbspots/show.ejs
@@ -87,6 +87,9 @@
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <p class="starability-result" data-rating="<%=review.rating%>">
+          Rated: <%= review.rating %> stars
+        </p>
         <p class="card-text">Review: <%= review.body %></p>
         <form
           action="/climbspots/<%=climbspot._id%>/reviews/<%=review._id%>?_method=DELETE"
