--- a/views/climbspots/edit.ejs
+++ b/views/climbspots/edit.ejs
@@ -2,7 +2,12 @@
 <div class="row">
   <h1 class="text-center">Edit Climbspot</h1>
   <div class="col-6 offset-3">
-    <form action="/climbspots/<%=climbspot._id%>?_method=PUT" method="POST">
+    <form
+      action="/climbspots/<%=climbspot._id%>?_method=PUT"
+      method="POST"
+      nonvalidate
+      class="validated-form"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -11,7 +16,9 @@
           id="title"
           name="climbspot[title]"
           value="<%=campground.title %>"
+          required
         />
+        <div class="valid-feedback">Looks Good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -21,7 +28,9 @@
           id="location"
           name="climbspot[location]"
           value="<%=climbspot.location %>"
+          required
         />
+        <div class="valid-feedback">Looks Good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
@@ -31,7 +40,9 @@
           id="image"
           name="climbspot[image]"
           value="<%=climbspot.image %>"
+          required
         />
+        <div class="valid-feedback">Looks Good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="difficulty">Climbspot difficulty</label>
@@ -46,7 +57,9 @@
             aria-describedby="difficulty-label"
             name="climbspot[difficulty]"
             value="<%=climbspot.difficulty %>"
+            required
           />
+          <div class="valid-feedback">Looks Good!</div>
         </div>
       </div>
 
@@ -57,9 +70,11 @@
           type="text"
           id="description"
           name="climbspot[description]"
+          required
         >
 <%= climbspot.description%></textarea
         >
+        <div class="valid-feedback">Looks Good!</div>
       </div>
       <div class="mb-3">
         <button class="btn btn-success">Update Climbspot</button>
