--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,9 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<% layout('layouts/boilerplate')%>
+<div class="row">
+  <div class="col-8 offset-4">
+    <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading"><%=err.message%></h4>
+      <p><%= err.stack %></p>
+    </div>
+  </div>
+</div>
