--- a/views/climbspots/edit.ejs
+++ b/views/climbspots/edit.ejs
@@ -5,7 +5,7 @@
     <form
       action="/climbspots/<%=climbspot._id%>?_method=PUT"
       method="POST"
-      nonvalidate
+      novalidate
       class="validated-form"
     >
       <div class="mb-3">
