--- a/views/climbspots/show.ejs
+++ b/views/climbspots/show.ejs
@@ -1,9 +1,39 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
+
 <div class="row">
   <div class="col-6">
+    <div id="climbspotCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <% climbspot.images.forEach((image, i) => { %>
+        <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+          <img src="<%= image.url%>" class="d-block w-100" alt="" />
+        </div>
+        <% }) %>
+      </div>
+      <% if(climbspot.images.length > 1) {%>
+      <a
+        class="carousel-control-prev"
+        href="#climbspotCarousel"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#climbspotCarousel"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+      <% } %>
+    </div>
+
     <div class="card mb-3">
-      <img src="<%= climbspot.image%>" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title"><%= climbspot.title%></h5>
         <p class="card-text"><%= climbspot.description%></p>
