--- a/views/climbspots/index.ejs
+++ b/views/climbspots/index.ejs
@@ -7,7 +7,7 @@
 <div class="card" mb-3>
   <div class="row">
     <div class="col-md-4">
-      <img class="img-fluid" alt="" src="<%= climbspot.image %>" />
+      <img class="img-fluid" alt="" src="<%= climbspot.images[0].url %>" />
     </div>
     <div class="col-md-8">
       <div class="card-body">
