--- a/views/climbspots/edit.ejs
+++ b/views/climbspots/edit.ejs
@@ -1,3 +1,5 @@
+<!-- views/climbspots/edit.ejs -->
+
 <% layout('layouts/boilerplate')%>
 <div class="row">
   <h1 class="text-center">Edit Climbspot</h1>
