--- a/views/climbspots/new.ejs
+++ b/views/climbspots/new.ejs
@@ -1,3 +1,5 @@
+<!-- views/climbspots/new.ejs -->
+
 <% layout('layouts/boilerplate')%>
 <div class="row">
   <h1 class="text-center">New Climbspots</h1>
