--- a/views/climbspots/edit.ejs
+++ b/views/climbspots/edit.ejs
@@ -17,7 +17,7 @@
           type="text"
           id="title"
           name="climbspot[title]"
-          value="<%=campground.title %>"
+          value="<%=climbspot.title %>"
           required
         />
         <div class="valid-feedback">Looks Good!</div>
