--- a/views/climbspots/show.ejs
+++ b/views/climbspots/show.ejs
@@ -5,6 +5,7 @@
 
 <div class="row">
   <div class="col-6">
+    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="climbspotCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <% climbspot.images.forEach((image, i) => { %>
@@ -134,3 +135,8 @@
     <% } %>
   </div>
 </div>
+
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+</script>
+<script src="/javascripts/showMap.js"></script>
