bug fixes and map works

--- a/views/climbspots/show.ejs
+++ b/views/climbspots/show.ejs
@@ -138,6 +138,7 @@
 
 <script>
   const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  const climbspot = '<%-climbspot %>';
 </script>
 
 <script src="/javascripts/showMap.js"></script>
