--- a/views/climbspots/index.ejs
+++ b/views/climbspots/index.ejs
@@ -1,6 +1,7 @@
 <!-- views/climbspots/index.ejs -->
 
 <% layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Climbspots</h1>
 <div>
   <a href="/climbspots/new">Add Climbspots</a>
@@ -9,7 +10,15 @@
 <div class="card" mb-3>
   <div class="row">
     <div class="col-md-4">
+      <% if (climbspot.images.length) {%>
       <img class="img-fluid" alt="" src="<%= climbspot.images[0].url %>" />
+      <%} else {%>
+      <img
+        class="img-fluid"
+        alt=""
+        src="https://www.travelyosemite.com/media/823998/yosemite-rock-climbing-big-wall-climbing-3228-1000x667.jpg?mode=pad&rnd=133077504660000000"
+      />
+      <%}%>
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -26,3 +35,5 @@
   </div>
 </div>
 <%}%>
+
+<script src="javascripts/clusterMaps.js"></script>
