--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,8 +11,8 @@
       </div>
       <div class="navbar-nav ms-auto">
         <% if (user) { %>
-          <a class="nav-link" href="/climbspots/new" <%- title === 'Add Climbspot' ? 'class="active"' : '' %>>Add Climbspot</a>
-          <a class="nav-link" href="/climbspots" <%- title === 'View Climbspots' ? 'class="active"' : '' %>>Climbspots</a>
+          <a class="nav-link" href="/climbspots/new" <%- title === 'Add Climbspot' ? 'class="active"' : '' %>>Add a climb</a>
+          <a class="nav-link" href="/climbspots" <%- title === 'View Climbspots' ? 'class="active"' : '' %>>Crags</a>
           <a class="nav-link" href="/logout">Log Out</a>
         <% } else { %>
           <a class="nav-link" href="/auth/google">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" alt="Log In"></a>
