--- a/views/climbspots/index.ejs
+++ b/views/climbspots/index.ejs
@@ -27,7 +27,7 @@
         <p class="card-text">
           <small class="text-dark-emphasis"><%= climbspot.location%></small>
         </p>
-        <a href="/climbspots/<%=climbspot._id%>" class="btn btn-primary"
+        <a href="/climbspots/<%=climbspot._id%>" class="btn btn-warning"
           >View <%= climbspot.title%>
         </a>
       </div>
