--- a/views/climbspots/index.ejs
+++ b/views/climbspots/index.ejs
@@ -2,10 +2,7 @@
 
 <% layout('layouts/boilerplate') %>
 <div id="map" style="width: 100%; height: 500px"></div>
-<h1>All Climbspots</h1>
-<div>
-  <a href="/climbspots/new">Add Climbspots</a>
-</div>
+<h1>All Crags</h1>
 <%for(let climbspot of climbspots){%>
 <div class="card" mb-3>
   <div class="row">
