--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <% title = typeof title !== 'undefined' ? title : 'Default Title'; %>
-<nav data-bs-theme="dark" class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav  class="navbar sticky-top navbar-expand-lg bg-body-tertiary" style="background-color: #e3ee92;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ClimbOn</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
