--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,13 @@
 <% title = typeof title !== 'undefined' ? title : 'Default Title'; %>
 <nav  class="navbar sticky-top navbar-expand-lg bg-body-tertiary" style="background-color: #e3ee92;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">ClimbOn</a>
+    <a class="navbar-brand " href="#"> <img class="carabiner" src="/images/carabiner11.png" alt="logo">  ClimbOn </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/">  Home</a>
       </div>
       <div class="navbar-nav ms-auto">
         <% if (user) { %>
