--- a/views/climbspots/show.ejs
+++ b/views/climbspots/show.ejs
@@ -5,7 +5,6 @@
 
 <div class="row">
   <div class="col-6">
-    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="climbspotCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <% climbspot.images.forEach((image, i) => { %>
@@ -49,7 +48,7 @@
       </ul>
       <div class="card-body">
         <a
-          class="card-link btn btn-info"
+          class="card-link btn btn-dark"
           href="/climbspots/<%=climbspot._id%>/edit"
           >Edit</a
         >
@@ -64,77 +63,95 @@
       <div class="card-footer text-muted">2 days ago</div>
     </div>
   </div>
-  <div class="col-6">
-    <h2>Leave a Review</h2>
-    <form
-      action="/climbspots/<%=climbspot._id%>/reviews"
-      method="POST"
-      class="mb-3 validated-form"
-      novalidate
-    >
-      <!-- <div class="mb-3">
-        <label class="form-label" for="rating">Rating</label>
-        <input
-          class="form-range"
-          type="range"
-          min="1"
-          max="5"
-          name="review[rating]"
-          id="rating"
-        />
-      </div> -->
-      <fieldset class="starability-basic">
-        <input
-          type="radio"
-          id="no-rate"
-          class="input-no-rate"
-          name="review[rating]"
-          value="1"
-          checked
-          aria-label="No rating."
-        />
-        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-        <label for="first-rate1" title="Terrible">1 star</label>
-        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-        <label for="first-rate2" title="Not good">2 stars</label>
-        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-        <label for="first-rate3" title="Average">3 stars</label>
-        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-        <label for="first-rate4" title="Very good">4 stars</label>
-        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-        <label for="first-rate5" title="Amazing">5 stars</label>
-      </fieldset>
-      <div class="mb-3">
-        <label class="form-label" for="body">Review</label>
-        <textarea
-          class="form-control"
-          name="review[body]"
-          id="body"
-          cols="30"
-          rows="3"
-          required
-        ></textarea>
-        <div class="valid-feedback">Looks good!</div>
+
+  <div class="col-md-6">
+    <div id="map" style="height: 300px"></div>
+    <div>
+      <h2>Leave a Review</h2>
+      <form
+        action="/climbspots/<%=climbspot._id%>/reviews"
+        method="POST"
+        class="mb-3 validated-form"
+        novalidate
+      >
+        <fieldset class="starability-basic">
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="review[rating]"
+            value="1"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+        <div class="mb-3">
+          <label class="form-label" for="body">Review</label>
+          <textarea
+            class="form-control"
+            name="review[body]"
+            id="body"
+            cols="30"
+            rows="3"
+            required
+          ></textarea>
+          <div class="valid-feedback">Looks good!</div>
+        </div>
+        <button class="btn btn-success">Submit</button>
+      </form>
+      <% for(let review of climbspot.reviews) { %>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h7 class="card-title">by: <%= review.author.name %></h7>
+          <p class="starability-result" data-rating="<%=review.rating%>">
+            Rated: <%= review.rating %> stars
+          </p>
+          <p class="card-text">Review: <%= review.body %></p>
+          <form
+            action="/climbspots/<%=climbspot._id%>/reviews/<%=review._id%>?_method=DELETE"
+            method="POST"
+          >
+            <button class="btn btn-sm btn-danger">Delete</button>
+          </form>
+        </div>
       </div>
-      <button class="btn btn-success">Submit</button>
-    </form>
-    <% for(let review of climbspot.reviews) { %>
-    <div class="card mb-3">
-      <div class="card-body">
-        <h5 class="card-title">Rating: <%= review.rating %></h5>
-        <p class="starability-result" data-rating="<%=review.rating%>">
-          Rated: <%= review.rating %> stars
-        </p>
-        <p class="card-text">Review: <%= review.body %></p>
-        <form
-          action="/climbspots/<%=climbspot._id%>/reviews/<%=review._id%>?_method=DELETE"
-          method="POST"
-        >
-          <button class="btn btn-sm btn-danger">Delete</button>
-        </form>
-      </div>
+      <% } %>
     </div>
-    <% } %>
   </div>
 </div>
 
