--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,64 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClimbOn</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-
-    <link rel="stylesheet" href="/stylesheets/home.css" />
-  </head>
-
-  <body class="d-flex text-center text-white bg-dark">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="mb-auto">
-        <div>
-          <h3 class="float-md-left mb-0">ClimbOn</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-right">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="/climbspots">Climbing Spots</a>
-            <% if(!currentUser) { %>
-            <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Register</a>
-            <% } else { %>
-            <a class="nav-link" href="/logout">Logout</a>
-            <% } %>
-          </nav>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/home.css">
+</head>
+<body class="text-center text-white">
+    <div class="vh-100 d-flex align-items-stretch">
+        <div class="min-vh-100 w-50 bg-dark d-flex flex-column justify-content-between">
+            <header class="px-3 mt-3">
+                <h3>Ready to climb?</h3>
+                <nav class="nav nav-masthead justify-content-center">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="/climbspots">Climbing Spots</a>
+                    <% if(!currentUser) { %>
+                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/register">Register</a>
+                    <% } else { %>
+                    <a class="nav-link" href="/logout">Logout</a>
+                    <% } %>
+                </nav>
+            </header>
+            <main class="px-3 my-auto">
+                <h1>Onclimb?</h1>
+                <p class="lead">
+                    On Belay? <br>
+                    Find your next send. <br>
+                    solve your next problem <br>
+                    Share a find with friends!
+                </p>
+                <a href="/climbspots" class="btn btn-lg btn-secondary font-weight-bold pink-button">View Climbing Spots</a>
+            </main>
+            <footer class="text-white-50 px-3 mb-3">
+                <p>&copy; 2024</p>
+            </footer>
         </div>
-      </header>
-      <main class="px-3">
-        <h1>Climb On</h1>
-        <p class="lead">
-          On Belay? <br />
-          Find your next send. <br />
-          Share a find with friends!
-        </p>
-        <a
-          href="/climbspots"
-          class="btn btn-lg btn-secondary font-weight-bold border-white bg-white"
-          >View Climbing Spots</a
-        >
-      </main>
-
-      <footer class="mt-auto text-white-50">
-        <p>&copy; 2020</p>
-      </footer>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLw
